[project]
name = "lite-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Anas", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai",
    "litellm>=1.59.8",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lite-llm = "lite_llm:main"
llm = "llm:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
